--- a/Bootstrap/Zylo.html
+++ b/Bootstrap/Zylo.html
@@ -126,28 +126,29 @@
                         <thead>
                           <tr>
                             <th scope="col">#</th>
-                            <th scope="col">First</th>
-                            <th scope="col">Last</th>
-                            <th scope="col">Handle</th>
+                            <th scope="col">Year</th>
+                            <th scope="col">Status</th>
+                            <th scope="col">Event</th>
                           </tr>
                         </thead>
                         <tbody>
                           <tr>
                             <th scope="row">1</th>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>@mdo</td>
+                            <td>2018</td>
+                            <td>Done!</td>
+                            <td>We became friends and never looked back.</td>
                           </tr>
                           <tr>
                             <th scope="row">2</th>
-                            <td>Jacob</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
+                            <td>2019</td>
+                            <td>Done!</td>
+                            <td>We became Love Birds and our lives changed.</td>
                           </tr>
                           <tr>
                             <th scope="row">3</th>
-                            <td colspan="2">Larry the Bird</td>
-                            <td>@twitter</td>
+                            <td>2023</td>
+                            <td>Pending...</td>
+                            <td>We'll get married and have each other for lifetime.</td>
                           </tr>
                         </tbody>
                       </table>
