--- a/Bootstrap/Zylo.html
+++ b/Bootstrap/Zylo.html
@@ -148,7 +148,7 @@
                             <th scope="row">3</th>
                             <td>2023</td>
                             <td>Pending...</td>
-                            <td>We'll get married and have each other for lifetime.</td>
+                            <td>We'll get married and live happily.</td>
                           </tr>
                         </tbody>
                       </table>
