--- a/Bootstrap/Zylo.html
+++ b/Bootstrap/Zylo.html
@@ -91,7 +91,7 @@
             </div>
             <div class="col-9">
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-3">
                         <div class="card">
                             <img src="images/F1.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -101,7 +101,7 @@
                             </div>
                           </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-3">
                         <div class="card">
                             <img src="images/F2.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -111,7 +111,7 @@
                             </div>
                           </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-3">
                         <div class="card">
                             <img src="Images/F3.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -120,7 +120,18 @@
                               <a href="#" class="btn btn-primary">I love You</a>
                             </div>
                           </div>
+                        </div>
+                    <div class="col-3">
+                    <div class="card">
+                        <img src="Images/F4.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">My CryBaby</h5>
+                            <p class="card-text">I can stand everything but your tears make me so weak that I can't describe.</p>
+                            <a href="#" class="btn btn-primary">I love You</a>
+                        </div>
+                        </div>
                     </div>
+                </div>
                 <div class="row">
                     <table class="table">
                         <thead>
