--- a/Bootstrap/Zylo.html
+++ b/Bootstrap/Zylo.html
@@ -71,8 +71,7 @@
                         </a>
                       </div>
                 </div>
-                <h1>This website is dedicated to my love, [Lover]...</h1>
-                <div class="row">
+                <div class="row lg2">
                     <ul class="list-group">
                         <li class="list-group-item">[Lover] is Pretty</li>
                         <li class="list-group-item">[Lover] is Humerous</li>
@@ -91,6 +90,7 @@
                 </div>
             </div>
             <div class="col-9">
+                <h1>Appreciation website for [Lover]</h1>
                 <div class="row">
                     <div class="col-3">
                         <div class="card">
