--- a/Bootstrap/Zylo.html
+++ b/Bootstrap/Zylo.html
@@ -48,7 +48,7 @@
           </div>
         </div>
       </nav>
-      <div class="container-flex">
+      <div class="container-fluid">
           <div class="row">
             <div class="col-3 sidebar">
                 <div class="row">
