--- a/Bootstrap/Zylo.html
+++ b/Bootstrap/Zylo.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="Zylo.css">
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light nav">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">[Lover].com</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
