--- a/Bootstrap/Zylo.html
+++ b/Bootstrap/Zylo.html
@@ -92,7 +92,7 @@
             <div class="col-9">
                 <h1>Appreciation website for [Lover]</h1>
                 <div class="row">
-                    <div class="col-3">
+                    <div class="col-xs-12 col-sm6 col-md-4 col-lg-3">
                         <div class="card">
                             <img src="images/F1.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -102,7 +102,7 @@
                             </div>
                           </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-xs-12 col-sm6 col-md-4 col-lg-3">
                         <div class="card">
                             <img src="images/F2.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -112,7 +112,7 @@
                             </div>
                           </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-xs-12 col-sm6 col-md-4 col-lg-3">
                         <div class="card">
                             <img src="Images/F3.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -122,7 +122,7 @@
                             </div>
                           </div>
                         </div>
-                    <div class="col-3">
+                    <div class="col-xs-12 col-sm6 col-md-4 col-lg-3">
                     <div class="card">
                         <img src="Images/F4.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
