--- a/Bootstrap/Project.html
+++ b/Bootstrap/Project.html
@@ -50,8 +50,8 @@
       <div class="container-fluid">
           <div class="row">
               <div class="col-xs-12 col-sm6 col-md-4 col-lg-3">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body" id="C4">
+                <div class="card" style="width: 18rem;background-color: darkgreen;">
+                    <div class="card-body" id="#C4">
                     <a href="#">
                     <h5 class="card-title">Spending</h5>
                       <p class="card-text">10M</p>
@@ -60,8 +60,8 @@
                   </div>
               </div>
               <div class="col-xs-12 col-sm6 col-md-4 col-lg-3">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body" id="C3">
+                <div class="card" style="width: 18rem;background-color: darkgoldenrod;">
+                    <div class="card-body" id="#C3">
                     <a href="#">
                     <h5 class="card-title">Spending</h5>
                       <p class="card-text">10M</p>
@@ -70,8 +70,8 @@
                   </div>
               </div>
               <div class="col-xs-12 col-sm6 col-md-4 col-lg-3">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body" id="C1">
+                <div class="card" style="width: 18rem;background-color: blue;">
+                    <div class="card-body" id="#C1">
                     <a href="#">
                     <h5 class="card-title">Spending</h5>
                       <p class="card-text">10M</p>
@@ -80,8 +80,8 @@
                   </div>
               </div>
               <div class="col-xs-12 col-sm6 col-md-4 col-lg-3">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body" id="C2">
+                <div class="card" style="width: 18rem;background-color: crimson;">
+                    <div class="card-body" id="#C2">
                     <a href="#">
                     <h5 class="card-title">Spending</h5>
                       <p class="card-text">10M</p>
