--- a/Bootstrap/Project.html
+++ b/Bootstrap/Project.html
@@ -91,7 +91,12 @@
               </div>
           </div>
           <div class="row">
-
+            <div class="col-6">
+                <h1>My Application</h1>
+            </div>
+            <div class="col-6">
+                <button type="button" class="btn btn-outline-primary">Primary</button>
+            </div>
           </div>
           <div class="row">
 
