--- a/Bootstrap/Project.html
+++ b/Bootstrap/Project.html
@@ -95,7 +95,7 @@
                 <h1>My Application</h1>
             </div>
             <div class="col-6">
-                <button type="button" class="btn btn-outline-primary">Primary</button>
+                <button type="button" class="btn btn-outline-primary" style="float: right;">New Application</button>
             </div>
           </div>
           <div class="row">
