--- a/Bootstrap/Project.html
+++ b/Bootstrap/Project.html
@@ -90,7 +90,7 @@
                   </div>
               </div>
           </div>
-          <div class="row">
+          <div class="row m-2">
             <div class="col-6">
                 <h1>My Application</h1>
             </div>
@@ -98,8 +98,104 @@
                 <button type="button" class="btn btn-outline-primary" style="float: right;">New Application</button>
             </div>
           </div>
+          <div class="row m-2">
+            <div class="col-3">
+            <input type="text" class="form-control" placeholder="Search Inside Table...">    
+            </div>
+            <div class="col-6"></div>
+            <div class="col-3">
+                <div class="btn-group" role="group" aria-label="Basic example" style="float: right;">
+                    <button type="button" class="btn btn-outline-primary">Print</button>
+                    <button type="button" class="btn btn-outline-primary">Share</button>
+                    <button type="button" class="btn btn-outline-primary">PDF</button>
+                  </div>
+            </div>
+          </div>
           <div class="row">
-
+            <table class="table table-hover">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">First</th>
+                    <th scope="col">Last</th>
+                    <th scope="col">Handle</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>@mdo</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2</th>
+                    <td>Jacob</td>
+                    <td>Thornton</td>
+                    <td>@fat</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">3</th>
+                    <td colspan="2">Larry the Bird</td>
+                    <td>@twitter</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">4</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>@mdo</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5</th>
+                    <td>Jacob</td>
+                    <td>Thornton</td>
+                    <td>@fat</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">6</th>
+                    <td colspan="2">Larry the Bird</td>
+                    <td>@twitter</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">7</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>@mdo</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">8</th>
+                    <td>Jacob</td>
+                    <td>Thornton</td>
+                    <td>@fat</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">9</th>
+                    <td colspan="2">Larry the Bird</td>
+                    <td>@twitter</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">10</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>@mdo</td>
+                  </tr>
+                  
+                </tbody>
+              </table>
+          </div>
+          <div class="row m-2">
+              <div class="col-6">
+                  <h5>Showing 10 of 100</h5>
+              </div>
+              <div class="col-6" style="float: right;">
+                <div class="btn-group" role="group" aria-label="Basic example" style="float: right;">
+                    <button type="button" class="btn btn-outline-primary">1</button>
+                    <button type="button" class="btn btn-outline-primary">2</button>
+                    <button type="button" class="btn btn-outline-primary">3</button>
+                    <button type="button" class="btn btn-outline-primary">4</button>
+                    <button type="button" class="btn btn-outline-primary">5</button>
+                  </div>
+              </div>
           </div>
       </div>
 
