--- a/Bootstrap/Zylo.html
+++ b/Bootstrap/Zylo.html
@@ -63,10 +63,10 @@
                         </a>
                         <a href="#" class="list-group-item list-group-item-action">
                           <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1">My Dive</h5>
+                            <h5 class="mb-1">My Diva</h5>
                             <small class="text-muted">[Lover]</small>
                           </div>
-                          <p class="mb-1">Your style, your feel your smile your EveryThing is so good, you are no less then a dive.</p>
+                          <p class="mb-1">Your style, your feel your smile your EveryThing is so good, you are no less then a Diva.</p>
                           <small class="text-muted">You are spectacular.</small>
                         </a>
                       </div>
