--- a/Bootstrap/Project.html
+++ b/Bootstrap/Project.html
@@ -90,12 +90,13 @@
                   </div>
               </div>
           </div>
+          <div class=""></div>
           <div class="row m-2">
             <div class="col-6">
                 <h1>My Application</h1>
             </div>
             <div class="col-6">
-                <button type="button" class="btn btn-outline-primary" style="float: right;">New Application</button>
+                <button type="button" class="btn btn-primary" style="float: right;">New Application</button>
             </div>
           </div>
           <div class="row m-2">
