--- a/Bootstrap/Project.html
+++ b/Bootstrap/Project.html
@@ -90,7 +90,11 @@
                   </div>
               </div>
           </div>
-          <div class=""></div>
+          <div class="row">
+            <div class="alert alert-warning" role="alert">
+              A simple warning alert—check it out!
+            </div>
+          </div>
           <div class="row m-2">
             <div class="col-6">
                 <h1>My Application</h1>
@@ -101,9 +105,14 @@
           </div>
           <div class="row m-2">
             <div class="col-3">
-            <input type="text" class="form-control" placeholder="Search Inside Table...">    
+            <input type="text" class="form-control" placeholder="Search Inside Table...">
+          </div>
+          <div class="col-1">
+              <button type="button" class="btn btn-primary" style="float: right;">Search</button>
+              
             </div>
-            <div class="col-6"></div>
+            <div class="col-5">
+            </div>
             <div class="col-3">
                 <div class="btn-group" role="group" aria-label="Basic example" style="float: right;">
                     <button type="button" class="btn btn-outline-primary">Print</button>
