--- a/Bootstrap/Project.html
+++ b/Bootstrap/Project.html
@@ -91,7 +91,7 @@
               </div>
           </div>
           <div class="row">
-            <div class="alert alert-warning" role="alert">
+            <div class="alert alert-warning m-4" role="alert">
               A simple warning alert—check it out!
             </div>
           </div>
