--- a/Bootstrap/Project.html
+++ b/Bootstrap/Project.html
@@ -52,41 +52,45 @@
               <div class="col-xs-12 col-sm6 col-md-4 col-lg-3">
                 <div class="card" style="width: 18rem;background-color: darkgreen;">
                     <div class="card-body" id="#C4">
-                    <a href="#">
+                    <a class="btn" data-bs-toggle="collapse" href="#collapseExample">
                     <h5 class="card-title">Spending</h5>
                       <p class="card-text">10M</p>
                     </a>
+                      <p class="collapse m-2" id="collapseExample" style="background-color: white;">This team has spent 10M on Research and analysis.</p>
                     </div>
                   </div>
               </div>
               <div class="col-xs-12 col-sm6 col-md-4 col-lg-3">
                 <div class="card" style="width: 18rem;background-color: darkgoldenrod;">
                     <div class="card-body" id="#C3">
-                    <a href="#">
-                    <h5 class="card-title">Spending</h5>
-                      <p class="card-text">10M</p>
-                    </a>
-                    </div>
+                      <a class="btn" data-bs-toggle="collapse" href="#collapseExample">
+                        <h5 class="card-title">Spending</h5>
+                          <p class="card-text">10M</p>
+                        </a>
+                          <p class="collapse m-2" id="collapseExample" style="background-color: white;">This team has spent 10M on Research and analysis.</p>
+                        </div>
                   </div>
               </div>
               <div class="col-xs-12 col-sm6 col-md-4 col-lg-3">
                 <div class="card" style="width: 18rem;background-color: blue;">
                     <div class="card-body" id="#C1">
-                    <a href="#">
-                    <h5 class="card-title">Spending</h5>
-                      <p class="card-text">10M</p>
-                    </a>
-                    </div>
+                      <a class="btn" data-bs-toggle="collapse" href="#collapseExample">
+                        <h5 class="card-title">Spending</h5>
+                          <p class="card-text">10M</p>
+                        </a>
+                          <p class="collapse m-2" id="collapseExample" style="background-color:white;">This team has spent 10M on Research and analysis.</p>
+                        </div>
                   </div>
               </div>
               <div class="col-xs-12 col-sm6 col-md-4 col-lg-3">
                 <div class="card" style="width: 18rem;background-color: crimson;">
                     <div class="card-body" id="#C2">
-                    <a href="#">
-                    <h5 class="card-title">Spending</h5>
-                      <p class="card-text">10M</p>
-                    </a>
-                    </div>
+                      <a class="btn" data-bs-toggle="collapse" href="#collapseExample">
+                        <h5 class="card-title">Spending</h5>
+                          <p class="card-text">10M</p>
+                        </a>
+                          <p class="collapse m-2" id="collapseExample" style="background-color: white;">This team has spent 10M on Research and analysis.</p>
+                        </div>
                   </div>
               </div>
           </div>
