--- a/Bootstrap/Project.html
+++ b/Bootstrap/Project.html
@@ -63,33 +63,33 @@
               <div class="col-xs-12 col-sm6 col-md-4 col-lg-3">
                 <div class="card" style="width: 18rem;background-color: darkgoldenrod;">
                     <div class="card-body" id="#C3">
-                      <a class="btn" data-bs-toggle="collapse" href="#collapseExample">
+                      <a class="btn" data-bs-toggle="collapse" href="#collapseExample1">
                         <h5 class="card-title">Spending</h5>
                           <p class="card-text">10M</p>
                         </a>
-                          <p class="collapse m-2" id="collapseExample" style="background-color: white;">This team has spent 10M on Research and analysis.</p>
+                          <p class="collapse m-2" id="collapseExample1" style="background-color: white;">This team has spent 10M on Research and analysis.</p>
                         </div>
                   </div>
               </div>
               <div class="col-xs-12 col-sm6 col-md-4 col-lg-3">
                 <div class="card" style="width: 18rem;background-color: blue;">
                     <div class="card-body" id="#C1">
-                      <a class="btn" data-bs-toggle="collapse" href="#collapseExample">
+                      <a class="btn" data-bs-toggle="collapse" href="#collapseExample2">
                         <h5 class="card-title">Spending</h5>
                           <p class="card-text">10M</p>
                         </a>
-                          <p class="collapse m-2" id="collapseExample" style="background-color:white;">This team has spent 10M on Research and analysis.</p>
+                          <p class="collapse m-2" id="collapseExample2" style="background-color:white;">This team has spent 10M on Research and analysis.</p>
                         </div>
                   </div>
               </div>
               <div class="col-xs-12 col-sm6 col-md-4 col-lg-3">
                 <div class="card" style="width: 18rem;background-color: crimson;">
                     <div class="card-body" id="#C2">
-                      <a class="btn" data-bs-toggle="collapse" href="#collapseExample">
+                      <a class="btn" data-bs-toggle="collapse" href="#collapseExample3">
                         <h5 class="card-title">Spending</h5>
                           <p class="card-text">10M</p>
                         </a>
-                          <p class="collapse m-2" id="collapseExample" style="background-color: white;">This team has spent 10M on Research and analysis.</p>
+                          <p class="collapse m-2" id="collapseExample3" style="background-color: white;">This team has spent 10M on Research and analysis.</p>
                         </div>
                   </div>
               </div>
