--- a/Bootstrap/Project.html
+++ b/Bootstrap/Project.html
@@ -181,7 +181,7 @@
                                     <div class="input-group has-validation">
                                       <span class="input-group-text" id="inputGroupPrepend3">@</span>
                                       <input type="text" class="form-control is-invalid" id="validationServerUsername" aria-describedby="inputGroupPrepend3 validationServerUsernameFeedback" required>
-                                      <div id="validationServerUsernameFeedback" class="invalid-feedback">
+                                      <div id="validationServerUsernameFeedback" class="valid-feedback">
                                         Please choose a username.
                                       </div>
                                     </div>
@@ -189,7 +189,7 @@
                                   <div class="col-md-6">
                                     <label for="validationServer03" class="form-label">City</label>
                                     <input type="text" class="form-control is-invalid" id="validationServer03" aria-describedby="validationServer03Feedback" required>
-                                    <div id="validationServer03Feedback" class="invalid-feedback">
+                                    <div id="validationServer03Feedback" class="valid-feedback">
                                       Please provide a valid city.
                                     </div>
                                   </div>
@@ -199,14 +199,14 @@
                                       <option selected disabled value="">Choose...</option>
                                       <option>...</option>
                                     </select>
-                                    <div id="validationServer04Feedback" class="invalid-feedback">
+                                    <div id="validationServer04Feedback" class="valid-feedback">
                                       Please select a valid state.
                                     </div>
                                   </div>
                                   <div class="col-md-3">
                                     <label for="validationServer05" class="form-label">Zip</label>
                                     <input type="text" class="form-control is-invalid" id="validationServer05" aria-describedby="validationServer05Feedback" required>
-                                    <div id="validationServer05Feedback" class="invalid-feedback">
+                                    <div id="validationServer05Feedback" class="valid-feedback">
                                       Please provide a valid zip.
                                     </div>
                                   </div>
@@ -216,7 +216,7 @@
                                       <label class="form-check-label" for="invalidCheck3">
                                         Agree to terms and conditions
                                       </label>
-                                      <div id="invalidCheck3Feedback" class="invalid-feedback">
+                                      <div id="invalidCheck3Feedback" class="valid-feedback">
                                         You must agree before submitting.
                                       </div>
                                     </div>
