--- a/Bootstrap/Project.html
+++ b/Bootstrap/Project.html
@@ -164,14 +164,14 @@
                                 <form class="row g-3">
                                   <div class="col-md-4">
                                     <label for="validationServer01" class="form-label">First name</label>
-                                    <input type="text" class="form-control is-valid" id="validationServer01" value="Mark" required>
+                                    <input type="text" class="form-control is-valid" id="validationServer01" value="Talha" required>
                                     <div class="valid-feedback">
                                       Looks good!
                                     </div>
                                   </div>
                                   <div class="col-md-4">
                                     <label for="validationServer02" class="form-label">Last name</label>
-                                    <input type="text" class="form-control is-valid" id="validationServer02" value="Otto" required>
+                                    <input type="text" class="form-control is-valid" id="validationServer02" value=" Bhutto" required>
                                     <div class="valid-feedback">
                                       Looks good!
                                     </div>
@@ -180,23 +180,23 @@
                                     <label for="validationServerUsername" class="form-label">Username</label>
                                     <div class="input-group has-validation">
                                       <span class="input-group-text" id="inputGroupPrepend3">@</span>
-                                      <input type="text" class="form-control is-invalid" id="validationServerUsername" aria-describedby="inputGroupPrepend3 validationServerUsernameFeedback" required>
+                                      <input type="text" class="form-control is-valid" value="talhabhutto@gmail.com" id="validationServerUsername" aria-describedby="inputGroupPrepend3 validationServerUsernameFeedback" required>
                                       <div id="validationServerUsernameFeedback" class="valid-feedback">
-                                        Please choose a username.
+                                        Looks good!
                                       </div>
                                     </div>
                                   </div>
                                   <div class="col-md-6">
                                     <label for="validationServer03" class="form-label">City</label>
-                                    <input type="text" class="form-control is-invalid" id="validationServer03" aria-describedby="validationServer03Feedback" required>
+                                    <input type="text" class="form-control is-valid" value="Karachi" id="validationServer03" aria-describedby="validationServer03Feedback" required>
                                     <div id="validationServer03Feedback" class="valid-feedback">
-                                      Please provide a valid city.
+                                      Looks good!
                                     </div>
                                   </div>
                                   <div class="col-md-3">
                                     <label for="validationServer04" class="form-label">State</label>
                                     <select class="form-select is-invalid" id="validationServer04" aria-describedby="validationServer04Feedback" required>
-                                      <option selected disabled value="">Choose...</option>
+                                      <option value="">Sindh</option>
                                       <option>...</option>
                                     </select>
                                     <div id="validationServer04Feedback" class="valid-feedback">
