--- a/Bootstrap/Project.html
+++ b/Bootstrap/Project.html
@@ -195,19 +195,21 @@
                                   </div>
                                   <div class="col-md-3">
                                     <label for="validationServer04" class="form-label">State</label>
-                                    <select class="form-select is-invalid" id="validationServer04" aria-describedby="validationServer04Feedback" required>
-                                      <option value="">Sindh</option>
-                                      <option>...</option>
+                                    <select class="form-select is-valid" id="validationServer04" aria-describedby="validationServer04Feedback" required>
+                                      <option value="Sindh">Sindh</option>
+                                      <option value="Punjab">Punjab</option>
+                                      <option value="KPK">KPK</option>
+                                      <option value="Balochistan">Balochistan</option>
                                     </select>
                                     <div id="validationServer04Feedback" class="valid-feedback">
-                                      Please select a valid state.
+                                      Looks good!
                                     </div>
                                   </div>
                                   <div class="col-md-3">
                                     <label for="validationServer05" class="form-label">Zip</label>
-                                    <input type="text" class="form-control is-invalid" id="validationServer05" aria-describedby="validationServer05Feedback" required>
+                                    <input type="text" value="75500" class="form-control is-valid" id="validationServer05" aria-describedby="validationServer05Feedback" required>
                                     <div id="validationServer05Feedback" class="valid-feedback">
-                                      Please provide a valid zip.
+                                      Looks good!
                                     </div>
                                   </div>
                                   <div class="col-12">
