--- a/Bootstrap/Project.html
+++ b/Bootstrap/Project.html
@@ -224,16 +224,9 @@
                                     </div>
                                   </div>
                                   <div class="col-12">
-                                    <button class="btn btn-primary" type="submit">Submit form</button>
+                                    <button class="btn btn-primary" type="submit" data-bs-dismiss="modal">Submit form</button>
                                   </div>
                                 </form>
-
-
-                              </div>
-                              <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary">Register</button>
-                              </div>
                             </div>
                           </div>
                         </div>
