--- a/Bootstrap/Project.html
+++ b/Bootstrap/Project.html
@@ -136,7 +136,11 @@
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                               </div>
                               <div class="modal-body">
-                                <input type="text" class="form-control m-2" placeholder="Enter Your Email">
+                                <div class="row">
+                                  <div class="col-3"><label for="validationServer03" class="form-label">Email:</label></div>
+                                  <div class="col-9"><input type="text" class="form-control m-2" placeholder="Enter Your Email"></div>
+                                </div>
+                                <label for="validationServer03" class="form-label">Password: </label>
                                 <input type="text" class="form-control m-2" placeholder="Enter Password...">
                               </div>
                               <div class="modal-footer">
@@ -227,6 +231,7 @@
                                     <button class="btn btn-primary" type="submit" data-bs-dismiss="modal">Submit form</button>
                                   </div>
                                 </form>
+                                </div>
                             </div>
                           </div>
                         </div>
