--- a/Bootstrap/Project.html
+++ b/Bootstrap/Project.html
@@ -137,15 +137,16 @@
                               </div>
                               <div class="modal-body">
                                 <div class="row">
-                                  <div class="col-3"><label for="validationServer03" class="form-label">Email:</label></div>
-                                  <div class="col-9"><input type="text" class="form-control m-2" placeholder="Enter Your Email"></div>
+                                  <div class="col-4"><p>Email</p></div>
+                                  <div class="col-8"><input type="text" class="form-control m-2" placeholder="Enter Your Email"></div>
                                 </div>
-                                <label for="validationServer03" class="form-label">Password: </label>
-                                <input type="text" class="form-control m-2" placeholder="Enter Password...">
+                                <div class="row">
+                                <div class="col-4"><p>Password</p></div>
+                                <div class="col-8"><input type="text" class="form-control m-2" placeholder="Enter Password..."></div>
+                              </div>
                               </div>
                               <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary">Login</button>
+                                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Login</button>
                               </div>
                             </div>
                           </div>
