--- a/Bootstrap/Project.html
+++ b/Bootstrap/Project.html
@@ -138,11 +138,11 @@
                               <div class="modal-body">
                                 <div class="row">
                                   <div class="col-4"><p>Email</p></div>
-                                  <div class="col-8"><input type="text" class="form-control m-2" placeholder="Enter Your Email"></div>
+                                  <div class="col-8"><input type="text"  value="talhabhutto420@gmail.com" class="form-control m-2 is-valid" placeholder="Enter Your Email"></div>
                                 </div>
                                 <div class="row">
                                 <div class="col-4"><p>Password</p></div>
-                                <div class="col-8"><input type="text" class="form-control m-2" placeholder="Enter Password..."></div>
+                                <div class="col-8"><input type="text" class="form-control m-2 is-valid" value="*******" placeholder="Enter Password..."></div>
                               </div>
                               </div>
                               <div class="modal-footer">
