--- a/Bootstrap/Project.html
+++ b/Bootstrap/Project.html
@@ -99,10 +99,6 @@
               <strong>Important!</strong> You should check in on some of those fields below.
               <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
-              <div class="alert alert-success alert-dismissible fade show collapse" id="collapseExample5" role="alert">
-                <strong>Response submitted successfully!</strong> 
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
           </div>
           <div class="row m-2">
             <div class="col-6">
@@ -233,7 +229,7 @@
                                     </div>
                                   </div>
                                   <div class="col-12">
-                                    <button class="collapse btn btn-primary" id="collapseExample4" data-bs-toggle="collapse" href="#collapseExample5" type="submit" data-bs-dismiss="modal">Submit form</button>
+                                    <button class="collapse btn btn-primary" id="collapseExample4" type="submit" data-bs-dismiss="modal">Submit form</button>
                                   </div>
                                 </form>
                                 </div>
