--- a/Bootstrap/Project.html
+++ b/Bootstrap/Project.html
@@ -256,7 +256,7 @@
             </div>
             <div class="col-3">
                 <div class="btn-group" role="group" aria-label="Basic example" style="float: right;">
-                    <button type="button" class="btn btn-outline-primary">Print</button>
+                    <button type="button" class="btn btn-outline-primary" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Print">Print</button>
                     <button type="button" class="btn btn-outline-primary">Share</button>
                     <button type="button" class="btn btn-outline-primary">PDF</button>
                   </div>
