--- a/Bootstrap/Project.html
+++ b/Bootstrap/Project.html
@@ -258,7 +258,7 @@
                 <div class="btn-group" role="group" aria-label="Basic example" style="float: right;">
                     <button type="button" class="btn btn-outline-primary" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Print">Print</button>
                     <button type="button" class="btn btn-outline-primary">Share</button>
-                    <button type="button" class="btn btn-outline-primary">PDF</button>
+                    <button type="button" class="btn btn-outline-primary" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Save in PDF form">PDF</button>
                   </div>
             </div>
           </div>
