--- a/Bootstrap/Project.html
+++ b/Bootstrap/Project.html
@@ -8,9 +8,11 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="Project.css">
+    
     <title>Practice</title>
   </head>
   <body>
+    
     <nav class="navbar navbar-expand-lg navbar-light bg-light nav">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Navbar</a>
@@ -258,7 +260,7 @@
                 <div class="btn-group" role="group" aria-label="Basic example" style="float: right;">
                     <button type="button" class="btn btn-outline-primary" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Print">Print</button>
                     <button type="button" class="btn btn-outline-primary">Share</button>
-                    <button type="button" class="btn btn-outline-primary" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Save in PDF form">PDF</button>
+                    <button type="button" class="btn btn-outline-primary" data-bs-toggle="tooltip" data-bs-placement="top" title="Save in PDF form">PDF</button>
                   </div>
             </div>
           </div>
